# Void-engine

./: ALL_FILES_SUPER.txt  ALL_PHASES_COMPLETE.md  BEVY_COMPONENTS_DEEP_DIVE.md  CHAT_FIXES_COMPLETE.md  CHAT_TIMELINE_IMPLEMENTATION_COMPLETE.md  CHAT_TIMELINE_INTEGRATION.md  CHAT_TIMELINE_SYSTEM.md  COMPILATION_WINDOW_DESIGN.md  DEEP_RESEARCH_COMPLETE.md  DIVINE_GIZMO_INSPECTOR.md  DOCS.md  EMBEDDED_VIEWPORT.md  EXPLORER_ALL_FILES_DUMP.txt  EXPLORER_FILES.md  EXPLORER_FILE_TREE_STRUCTURE.md  EXPLORER_INTEGRATION_COMPLETE.md  FINAL_GIZMO_INSPECTOR_FIX.md  FINAL_INTERACTIVE_GIZMO.md  FIREPLACE_DRAG_DROP.md  GAME_RUNNER_STATUS.md  GAME_WINDOW_READY_RU.md  GAME_WINDOW_TEST.md  GIZMO_FIXES_COMPLETE.md  GIZMO_IMPLEMENTATION_STATUS.md  GIZMO_INSPECTOR_SUCCESS.md  GIZMO_METHODS_COMPLETE.ts  GIZMO_WER_COMPLETE.md  GIZMO_WER_FINAL_INSTRUCTIONS.md  GIZMO_WER_REMAINING.md  GODOT_STYLE_REFACTOR_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  INSPECTOR_GIZMO_DEBUG.md  INTERACTIVE_GIZMO_COMPLETE.md  INTERACTIVE_GIZMO_PATCH.md  MESHINSTANCE_COLLISIONSHAPE_GUIDE.md  OFFSCREEN_RENDERING.md  OPTIMIZATION_COMPLETE_RU.md  PATCHES_PART_3_APPLIED.md  PATCHES_PART_4_COMPLETE.md  PHASE_1_COMPLETE.md  (+49 more)
docs/: how_to_use.md  index.html
engine/void-scene-loader/: Cargo.toml  PHASE_2_COMPLETE.md  README.md
engine/void-scene-loader/src/: components.rs  lib.rs
extensions/theme-defaults/: package.json  package.nls.json
scripts/: playground-server.ts  ts_unused_commenter.py
src/vs/: monaco.d.ts
test_world/: Cargo.toml
test_world/assets/scenes/: main.vecn
test_world/src/: main.rs
(+290 files in other folders)
