[package]
name = "void_test_world"
version = "0.1.0"
edition = "2021"
authors = ["Void Engine Team"]
description = "Test world for Void Engine - demonstrates all node types"

[[bin]]
name = "void_test_world"
path = "src/main.rs"

[dependencies]
bevy = "0.15"
void_scene_loader = { path = "../engine/void-scene-loader" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Windows release build
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
